@@ -6,7 +6,6 @@ import com.smartrwanda.tourism.dto.ProviderStatistics;
 import com.smartrwanda.tourism.dto.ProviderSummaryResponse;
 import com.smartrwanda.tourism.entity.Provider;
 import com.smartrwanda.tourism.entity.ProviderCategory;
-import org.springframework.transaction.annotation.Transactional;
 import com.smartrwanda.tourism.entity.User;
 import com.smartrwanda.tourism.entity.VerificationStatus;
 import com.smartrwanda.tourism.exception.BadRequestException;
@@ -16,9 +15,11 @@ import com.smartrwanda.tourism.repository.ProviderRepository;
 import com.smartrwanda.tourism.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,7 +39,7 @@ public class ProviderServiceImpl implements ProviderService {
             throw new BadRequestException("This user already has a provider profile");
         }
 
-        com.smartrwanda.tourism.entity.Provider provider = providerMapper.toEntity(request);
+        Provider provider = providerMapper.toEntity(request);
         provider.setUser(user);
         provider.setVerificationStatus(VerificationStatus.PENDING);
 
@@ -47,8 +48,8 @@ public class ProviderServiceImpl implements ProviderService {
 
     @Override
     public ProviderResponse getById(Long id) {
-        com.smartrwanda.tourism.entity.Provider provider = providerRepository.findById(id)
-                .orElseThrow();
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
         return providerMapper.toResponse(provider);
     }
 
@@ -56,15 +57,14 @@ public class ProviderServiceImpl implements ProviderService {
     public List<ProviderSummaryResponse> getAll() {
         return providerRepository.findAll().stream()
                 .map(providerMapper::toSummaryResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
-
 
     @Override
     public List<ProviderSummaryResponse> getByCategory(ProviderCategory category) {
         return providerRepository.findByCategory(category).stream()
                 .map(providerMapper::toSummaryResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -75,10 +75,9 @@ public class ProviderServiceImpl implements ProviderService {
         provider.setBusinessName(request.getBusinessName());
         provider.setCategory(request.getCategory());
         provider.setDescription(request.getDescription());
-        provider.setPhone(request.getPhone());
-        provider.setEmail(request.getEmail());
+        provider.setContactPhone(request.getPhone());
+        provider.setContactEmail(request.getEmail());
         provider.setLocation(request.getLocation());
-        provider.setImageUrls(request.getImageUrls());
 
         return providerMapper.toResponse(providerRepository.save(provider));
     }
@@ -92,10 +91,84 @@ public class ProviderServiceImpl implements ProviderService {
     }
 
     @Override
+    public List<ProviderResponse> getAllProviders() {
+        return providerRepository.findAll().stream()
+                .map(providerMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<ProviderResponse> getProvidersByCategory(ProviderCategory category) {
+        return providerRepository.findByCategory(category).stream()
+                .map(providerMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<ProviderResponse> getVerifiedProviders() {
+        return providerRepository.findByVerificationStatus(VerificationStatus.VERIFIED).stream()
+                .map(providerMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<ProviderResponse> getProvidersByUser(Long userId) {
+        // findByUserId returns Optional<Provider> — map to list of 0 or 1 element
+        return providerRepository.findByUserId(userId)
+                .map(providerMapper::toResponse)
+                .map(List::of)
+                .orElse(List.of());
+    }
+
+    @Override
+    public List<ProviderResponse> searchProviders(String keyword) {
+        return providerRepository.findByBusinessNameContainingIgnoreCase(keyword).stream()
+                .map(providerMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<ProviderResponse> getProvidersByLocation(String location) {
+        return providerRepository.findByLocationContainingIgnoreCase(location).stream()
+                .map(providerMapper::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public ProviderResponse uploadLogo(Long id, MultipartFile file) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+        return providerMapper.toResponse(providerRepository.save(provider));
+    }
+
+    @Override
+    public ProviderResponse uploadCoverImage(Long id, MultipartFile file) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+        return providerMapper.toResponse(providerRepository.save(provider));
+    }
+
+    @Override
+    public void deleteLogo(Long id) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+        provider.setLogoUrl(null);
+        providerRepository.save(provider);
+    }
+
+    @Override
+    public void deleteCoverImage(Long id) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+        provider.setCoverImageUrl(null);
+        providerRepository.save(provider);
+    }
+
+    @Override
     public List<ProviderSummaryResponse> getPendingProviders() {
         return providerRepository.findByVerificationStatus(VerificationStatus.PENDING).stream()
                 .map(providerMapper::toSummaryResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -122,5 +195,68 @@ public class ProviderServiceImpl implements ProviderService {
                 .verifiedCount(providerRepository.countByVerificationStatus(VerificationStatus.VERIFIED))
                 .rejectedCount(providerRepository.countByVerificationStatus(VerificationStatus.REJECTED))
                 .build();
+    }
+
+    @Override
+    public void verifyProvider(Long id, String status) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+        provider.setVerificationStatus(VerificationStatus.valueOf(status));
+        providerRepository.save(provider);
+    }
+
+    @Override
+    public void approveProvider(Long id) {
+        verifyProvider(id, "VERIFIED");
+    }
+
+    @Override
+    public void rejectProvider(Long id, String reason) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+        provider.setVerificationStatus(VerificationStatus.REJECTED);
+        providerRepository.save(provider);
+    }
+
+    @Override
+    public ProviderStatistics getProviderStatistics(Long id) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+
+        return ProviderStatistics.builder()
+                .totalProviders(1L)
+                .pendingCount(provider.getVerificationStatus() == VerificationStatus.PENDING ? 1L : 0L)
+                .verifiedCount(provider.getVerificationStatus() == VerificationStatus.VERIFIED ? 1L : 0L)
+                .rejectedCount(provider.getVerificationStatus() == VerificationStatus.REJECTED ? 1L : 0L)
+                .build();
+    }
+
+    @Override
+    public long getTotalProvidersCount() {
+        return providerRepository.count();
+    }
+
+    @Override
+    public long getVerifiedProvidersCount() {
+        return providerRepository.countByVerificationStatus(VerificationStatus.VERIFIED);
+    }
+
+    @Override
+    public long getPendingProvidersCount() {
+        return providerRepository.countByVerificationStatus(VerificationStatus.PENDING);
+    }
+
+    @Override
+    public List<ProviderSummaryResponse> getAllProviderSummaries() {
+        return providerRepository.findAll().stream()
+                .map(providerMapper::toSummaryResponse)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public ProviderResponse getProviderById(Long id) {
+        Provider provider = providerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Provider not found"));
+        return providerMapper.toResponse(provider);
     }
 }
